Modificada la configuración de Swagger
Se actualizó la configuración de Swagger para que funcione con el proyecto desplegado en Render
